2012-07-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Print 'dump done' if the dump succeeded.

2012-07-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (val_t_display_strs): Add a print_unit argument.
	* common-src/conffile.h (val_t_display_strs): Change prototype.
	* perl/Amanda/Config.swg (getconf_byname_strs): Use val_t_display_strs
	  with a FALSE print_unit.

2012-07-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Correctly parse byte suffix.
	* common-src/conffile.h: Add confunit_t.
	* installcheck/amgetconf.pl: Fix for byte parsing.

2012-07-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (tape_action): Fix for flush_*.
	  Change debug level.

2012-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/JSON.pm: Fix comment.

2012-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scan/traditional.pm,
	  perl/Amanda/Taper/Scribe.pm: Correctly report error.

2012-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: Small fix.
	* perl/Amanda/BigIntCompat.pm: Add TO_JSON to return anumber.
	* perl/Amanda/JSON.pm: documention
	* perl/Amanda/JSON/Changer.pm,
	  perl/Amanda/JSON/Config.pm,
	  perl/Amanda/JSON/DB/Catalog.pm,
	  perl/Amanda/JSON/Tapelist.pm: amanda SON perl modules.
	* perl/Amanda/JSON/RPC/Dispatcher.pm
	  perl/Amanda/JSON/RPC/Dispatcher/App.pm
	  perl/Amanda/JSON/RPC/Dispatcher/Procedure.pm: perl modules for JSON.
	* perl/Amanda/Tapelist.swg: Set $datestamp to 0 if !defined.
	* perl/Makefile.am: Compile new modules.
	* server-src/Makefile.am: Compile amanda.psgi.
	* server-src/amanda.psgi.pl: The amanda psgi.

2012-06-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/glib-util.c: Remove debug statements.

2012-06-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/glib-util.c: Do not compile ssl initialization code if
	  libcurl is not linked.
